Add missing log and comment services
